# computer-graphics-ray-tracing

./: CMakeLists.txt  README.html  README.md  README.tex.md  main.cpp
data/: frame.stl  inside-a-sphere.json  mirror.json  mirror.stl  skull.stl  triangle.json  two-spheres-and-plane.json
include/: blinn_phong_shading.h  read_json.h
lib/debug/windows/: hw2.lib
lib/release/windows/: hw2.lib
src/: DirectionalLight.cpp  Plane.cpp  PointLight.cpp  Sphere.cpp  Triangle.cpp  TriangleSoup.cpp  blinn_phong_shading.cpp  creative.json  first_hit.cpp  raycolor.cpp  reflect.cpp  viewing_ray.cpp  write_ppm.cpp
